# libslic3r-rs

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PROFILE_MANAGEMENT_VERIFICATION.md  clippy.toml  profile_verification_test.rs
crates/slicecore-ai/: Cargo.toml
crates/slicecore-ai/src/: config.rs  error.rs  geometry.rs  lib.rs  profile.rs  prompt.rs  provider.rs  suggest.rs  types.rs
crates/slicecore-ai/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
crates/slicecore-ai/tests/: integration.rs  mock_provider.rs
crates/slicecore-arrange/: Cargo.toml
crates/slicecore-arrange/src/: bed.rs  config.rs  error.rs  footprint.rs  grouper.rs  lib.rs  orient.rs  placer.rs  result.rs  sequential.rs
crates/slicecore-arrange/tests/: integration.rs
crates/slicecore-cli/: Cargo.toml
crates/slicecore-cli/src/: analysis_display.rs  cli_output.rs  csg_command.rs  csg_info.rs  diff_profiles_command.rs  job_dir.rs  main.rs  override_set.rs  plate_cmd.rs  plugins_command.rs  profile_command.rs  profile_wizard.rs  progress.rs  schema_command.rs  slice_workflow.rs  stats_display.rs
crates/slicecore-cli/src/calibrate/: common.rs  first_layer.rs  flow.rs  mod.rs  retraction.rs  temp_tower.rs
crates/slicecore-cli/tests/: cli_ai.rs  cli_calibrate.rs  cli_convert.rs  cli_csg.rs  cli_job_dir.rs  cli_output.rs  cli_plate.rs  cli_plugins.rs  cli_profile_compat.rs  cli_profile_enable.rs  cli_profile_search.rs  cli_profile_set.rs  cli_slice_profiles.rs  cli_thumbnail.rs
crates/slicecore-config-derive/: Cargo.toml
crates/slicecore-config-derive/src/: codegen.rs  lib.rs  parse.rs
crates/slicecore-config-derive/tests/: derive_test.rs
crates/slicecore-config-schema/: Cargo.toml
crates/slicecore-config-schema/src/: json_schema.rs  lib.rs  metadata_json.rs  registry.rs  search.rs  types.rs  validate.rs
crates/slicecore-engine/: Cargo.toml
crates/slicecore-engine/benches/: cascade_bench.rs  geometry_benchmark.rs  parallel_benchmark.rs  slice_benchmark.rs  travel_benchmark.rs
crates/slicecore-engine/src/: arachne.rs  builtin_profiles.rs  calibrate.rs  calibration.rs  cascade.rs  config.rs  config_validate.rs  cost_model.rs  custom_gcode.rs  enabled_profiles.rs  engine.rs  error.rs  estimation.rs  event.rs  extrusion.rs  filament.rs  flow_control.rs  gap_fill.rs  gcode_gen.rs  gcode_template.rs  infill.rs  ironing.rs  lib.rs  modifier.rs  multimaterial.rs  output.rs  parallel.rs  perimeter.rs  planner.rs  plate_config.rs  polyhole.rs  postprocess_builtin.rs  preview.rs  profile_compose.rs  profile_convert.rs  profile_diff.rs  profile_import.rs  profile_import_ini.rs  profile_library.rs  profile_resolve.rs  (+8 more)
crates/slicecore-engine/src/gcode_analysis/: comparison.rs  metrics.rs  mod.rs  parser.rs  slicer_detect.rs
crates/slicecore-engine/src/infill/: adaptive_cubic.rs  cubic.rs  grid.rs  gyroid.rs  honeycomb.rs  lightning.rs  mod.rs  monotonic.rs  rectilinear.rs  tpms_d.rs  tpms_fk.rs
crates/slicecore-engine/src/support/: bridge.rs  config.rs  conflict.rs  detect.rs  interface.rs  mod.rs  overhang_perimeter.rs  override_system.rs  traditional.rs  tree.rs  (+1 more)
crates/slicecore-engine/tests/: calibration_cube.rs  calibration_tests.rs  config_integration.rs  determinism.rs  gcode_analysis_integration.rs  golden_tests.rs  integration.rs  integration_phase20.rs  integration_pipeline.rs  integration_profile_convert.rs  integration_profile_import.rs  integration_profile_library.rs  integration_profile_library_bambu.rs  integration_profile_library_creality.rs  integration_profile_library_ini.rs  phase12_integration.rs  phase33_p1_integration.rs  phase34_integration.rs  phase4_integration.rs  phase5_integration.rs  plate_e2e.rs  post_process_integration.rs  progress_cancellation.rs  registry_integrity.rs  statistics_integration.rs  travel_reduction.rs
crates/slicecore-fileio/: Cargo.toml
crates/slicecore-fileio/src/: detect.rs  error.rs  export.rs  lib.rs  obj.rs  plate_metadata.rs  project_config.rs  stl.rs  stl_ascii.rs  stl_binary.rs  threemf.rs
crates/slicecore-fileio/tests/: integration.rs  wasm_3mf_test.rs
crates/slicecore-gcode-io/: Cargo.toml
crates/slicecore-gcode-io/src/: arc.rs  bambu.rs  commands.rs  dialect.rs  error.rs  klipper.rs  lib.rs  marlin.rs  reprap.rs  thumbnail.rs  validate.rs  writer.rs
crates/slicecore-gcode-io/tests/: integration.rs
crates/slicecore-geo/: Cargo.toml
crates/slicecore-geo/src/: area.rs  boolean.rs  convex_hull.rs  error.rs  lib.rs  offset.rs  point_in_poly.rs  polygon.rs  polyline.rs  simplify.rs
crates/slicecore-math/: Cargo.toml
crates/slicecore-math/src/: bbox.rs  convert.rs  coord.rs  epsilon.rs  lib.rs  matrix.rs  point.rs  vec.rs
crates/slicecore-mesh/: Cargo.toml
crates/slicecore-mesh/benches/: csg_bench.rs
crates/slicecore-mesh/src/: bvh.rs  error.rs  lib.rs  repair.rs  spatial.rs  stats.rs  transform.rs  triangle_mesh.rs
crates/slicecore-mesh/tests/: csg_boolean.rs  csg_cancellation.rs  csg_split_hollow.rs  repair_integration.rs
crates/slicecore-plugin/: Cargo.toml
crates/slicecore-plugin-api/: Cargo.toml
crates/slicecore-plugin-api/src/: error.rs  lib.rs  metadata.rs  postprocess_traits.rs  postprocess_types.rs  traits.rs  types.rs
crates/slicecore-plugin/src/: convert.rs  discovery.rs  error.rs  lib.rs  native.rs  postprocess.rs  postprocess_convert.rs  registry.rs  sandbox.rs  status.rs  wasm.rs
crates/slicecore-plugin/tests/: integration_tests.rs
crates/slicecore-plugin/wit/: slicecore-plugin.wit
crates/slicecore-render/: Cargo.toml
crates/slicecore-render/src/: camera.rs  encode.rs  framebuffer.rs  gcode_embed.rs  lib.rs  pipeline.rs  png_encode.rs  rasterizer.rs  shading.rs  types.rs
crates/slicecore-render/tests/: integration.rs
crates/slicecore-slicer/: Cargo.toml
crates/slicecore-slicer/src/: adaptive.rs  contour.rs  layer.rs  lib.rs  resolve.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_csg/: overlapping_quads  overlapping_tris
fuzz/fuzz_targets/: fuzz_csg.rs  fuzz_obj.rs  fuzz_stl_ascii.rs  fuzz_stl_binary.rs
plugins/examples/wasm-spiral-infill/: Cargo.toml  plugin.toml
(+671 files in other folders)
