[workspace]
members = ["crates/*"]
exclude = ["plugins/examples/native-zigzag-infill", "plugins/examples/wasm-spiral-infill"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
approx = "0.5"
thiserror = "2"
proptest = "1"
byteorder = "1"
tempfile = "3"
abi_stable = "0.11"
semver = "1"
toml = "0.8"
rmp-serde = "1"
criterion = { version = "0.5", features = ["html_reports"] }
walkdir = "2"
