[package]
name = "slicecore-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI binary for the slicecore 3D slicing engine"

[[bin]]
name = "slicecore"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
slicecore-engine = { path = "../slicecore-engine", features = ["plugins", "ai", "arrange"] }
slicecore-config-schema = { path = "../slicecore-config-schema" }
slicecore-fileio = { path = "../slicecore-fileio" }
slicecore-mesh = { path = "../slicecore-mesh" }
slicecore-gcode-io = { path = "../slicecore-gcode-io" }
slicecore-ai = { path = "../slicecore-ai" }
slicecore-plugin = { path = "../slicecore-plugin" }
slicecore-plugin-api = { path = "../slicecore-plugin-api" }
slicecore-render = { path = "../slicecore-render" }
slicecore-arrange = { path = "../slicecore-arrange" }
slicecore-math = { path = "../slicecore-math" }
console = "0.15"
indicatif = "0.17"
anyhow = { workspace = true }
home = "0.5"

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
