[package]
name = "slicecore-config-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Setting schema types and registry for the ConfigSchema system"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
