[package]
name = "slicecore-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Slicing pipeline orchestrator and print configuration for the slicecore engine"

[features]
default = []
plugins = ["dep:slicecore-plugin"]

[dependencies]
slicecore-math = { path = "../slicecore-math" }
slicecore-mesh = { path = "../slicecore-mesh" }
slicecore-geo = { path = "../slicecore-geo" }
slicecore-slicer = { path = "../slicecore-slicer" }
slicecore-fileio = { path = "../slicecore-fileio" }
slicecore-gcode-io = { path = "../slicecore-gcode-io" }
slicecore-plugin = { path = "../slicecore-plugin", optional = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
boostvoronoi = "0.11.1"

[dev-dependencies]
serde_json = { workspace = true }
