[package]
name = "slicecore-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Slicing pipeline orchestrator and print configuration for the slicecore engine"

[features]
default = []
plugins = ["dep:slicecore-plugin"]
ai = ["dep:slicecore-ai"]

[dependencies]
slicecore-math = { path = "../slicecore-math" }
slicecore-mesh = { path = "../slicecore-mesh" }
slicecore-geo = { path = "../slicecore-geo" }
slicecore-slicer = { path = "../slicecore-slicer" }
slicecore-fileio = { path = "../slicecore-fileio" }
slicecore-gcode-io = { path = "../slicecore-gcode-io" }
slicecore-plugin = { path = "../slicecore-plugin", optional = true }
slicecore-ai = { path = "../slicecore-ai", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
boostvoronoi = "0.11.1"
rmp-serde = { workspace = true }
walkdir = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "slice_benchmark"
harness = false

[[bench]]
name = "geometry_benchmark"
harness = false
