[package]
name = "slicecore-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Slicing pipeline orchestrator and print configuration for the slicecore engine"

[features]
default = ["parallel"]
plugins = []
ai = ["dep:slicecore-ai"]
parallel = ["dep:rayon"]
arrange = ["dep:slicecore-arrange"]

[dependencies]
slicecore-math = { path = "../slicecore-math" }
slicecore-mesh = { path = "../slicecore-mesh" }
slicecore-geo = { path = "../slicecore-geo" }
slicecore-slicer = { path = "../slicecore-slicer" }
slicecore-fileio = { path = "../slicecore-fileio" }
slicecore-gcode-io = { path = "../slicecore-gcode-io" }
slicecore-plugin = { path = "../slicecore-plugin", default-features = false }
slicecore-plugin-api = { path = "../slicecore-plugin-api" }
slicecore-ai = { path = "../slicecore-ai", optional = true }
slicecore-arrange = { path = "../slicecore-arrange", optional = true }
slicecore-config-schema = { path = "../slicecore-config-schema" }
slicecore-config-derive = { path = "../slicecore-config-derive" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
boostvoronoi = "0.11.1"
rayon = { version = "1.11", optional = true }
rmp-serde = { workspace = true }
walkdir = { workspace = true }
sha2 = "0.10"
strsim = "0.11"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "slice_benchmark"
harness = false

[[bench]]
name = "geometry_benchmark"
harness = false

[[bench]]
name = "parallel_benchmark"
harness = false
required-features = ["parallel"]

[[bench]]
name = "travel_benchmark"
harness = false
