[package]
name = "slicecore-fileio"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "File I/O for 3D mesh formats (STL, 3MF, OBJ) in the slicecore slicing engine"

[dependencies]
slicecore-math = { path = "../slicecore-math" }
slicecore-mesh = { path = "../slicecore-mesh" }
byteorder = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tobj = { version = "4", default-features = false }

# lib3mf depends on zip -> zstd-sys (C library), which cannot compile for
# wasm32-unknown-unknown without a C cross-compiler. 3MF support is therefore
# excluded on WASM targets. On native targets, 3MF is always available.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
lib3mf = { version = "0.1", default-features = false }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
