[package]
name = "slicecore-math"
description = "Foundation math types for the slicecore 3D slicing engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
approx = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
