[package]
name = "slicecore-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Triangle mesh data structures with BVH spatial indexing for the slicecore 3D slicing engine"

[features]
default = []
parallel = ["rayon"]

[dependencies]
slicecore-math = { path = "../slicecore-math" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
robust = "1.1"
rayon = { version = "1", optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "csg_bench"
harness = false
