[package]
name = "slicecore-plugin"
description = "Plugin registry, native loader, and discovery for the slicecore slicing engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["native-plugins"]
native-plugins = []
wasm-plugins = []

[dependencies]
slicecore-plugin-api = { path = "../slicecore-plugin-api" }
slicecore-math = { path = "../slicecore-math" }
slicecore-geo = { path = "../slicecore-geo" }
serde = { workspace = true }
toml = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
abi_stable = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
