[package]
name = "slicecore-plugin"
description = "Plugin registry, native loader, and discovery for the slicecore slicing engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["native-plugins", "wasm-plugins"]
native-plugins = []
wasm-plugins = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dependencies]
slicecore-plugin-api = { path = "../slicecore-plugin-api" }
slicecore-math = { path = "../slicecore-math" }
slicecore-geo = { path = "../slicecore-geo" }
slicecore-gcode-io = { path = "../slicecore-gcode-io" }
serde = { workspace = true }
toml = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
abi_stable = { workspace = true }
wasmtime = { version = "41", features = ["component-model", "cranelift"], optional = true }
wasmtime-wasi = { version = "41", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
