[package]
name = "slicecore-render"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CPU software triangle rasterizer for thumbnail/preview image generation"

[dependencies]
slicecore-mesh = { path = "../slicecore-mesh" }
slicecore-math = { path = "../slicecore-math" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"

[dev-dependencies]
slicecore-fileio = { path = "../slicecore-fileio" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
zip = "8"
